--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "EXIF Metadata Viewer",
-  "version": "1.1",
+  "name": "__MSG_extName__",
+  "version": "1.2",
   "manifest_version": 3,
-  "description": "A browser extension to display EXIF/metadata information of images directly on web pages.",
+  "description": "__MSG_extDescription__",
+  "default_locale": "en",
   "icons": {
     "16": "icon.png",
     "48": "icon.png",
